<resources>
    <string name="txt_prof_name_label">NAME : </string>
    <string name="txt_prof_newname_label">NEW NAME : </string>
    <string name="txt_prof_email_label">EMAIL : </string>
    <string name="txt_prof_newemail_label">NEW EMAIL : </string>
    <string name="txt_prof_password_label">PASSWORD : </string>
    <string name="txt_prof_newpassword_label">NEW PASS : </string>
    <string name="editproflabel">Edit Profile</string>
    <string name="myproflabel">My Profile</string>
    
    <string name="line">------------------------------------------</string>
    
    <string name="app_name">Memory</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="FBlogin">FACEBOOK LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="TOP_SCORES">TOP SCORES</string>
    <string name="top_scores">Top Scores</string>
    <string name="how_to_play">How to Play?</string>
    <string name="or">------------------ or ------------------</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="game_rules"><h1><b>Rules</b></h1>\n
        1. Cards are laid out in a grid face down.\n
        2. Select First card from the grid.\n
        3. Select Second card from the grid.\n
        4. If card matches then it will disappear from the grid.\n
        5. If card does not match then turn them back over.\n
        6. The game is over when all the cards have been matched.\n\n
        <b>Tip to Score more: </b>Remember what was on card and where it was.\n\n
        <b>Points: </b>10 points for every match and remaining time as bonus points.\n
    </string>
    <string name="send_password">SEND PASSWORD</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    
    <string name="action_settings">Settings</string>
    <string name="country_prompt1">Categories</string>
    
    <string-array name="country_arrays1">
        <item>Select a Category</item>
        <item>Foods</item>
        <item>Logos</item>
        <item>Animals</item>
    </string-array>
    <string name="country_prompt">Level</string>
    
    <string-array name="country_arrays">
        <item>Select a Level</item>
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Hard</item>
    </string-array>
    <string name="text_with_paragraphs">
        <![CDATA[
            Congratulation!!<br/>
            User Name<br/>
            Your Score<br/><br/>
            <b>Level:Easy</b><br/>
            <b>Time:</b>3.05 min<br/>
            <b>Bonus Points:</b>10<br/>
            <br/><br/><b>Score:</b>95<br/>
        ]]>
    </string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_music">Music</string>
    <string name="nav_help">Help</string>
    <string name="nav_sound">Sound</string>
    <string name="nav_language">Language Setting</string>
    <string name="nav_notification">Notifications</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="medium">Medium</string>
    <string name="fb_app_id">177866542617462</string>
    <string name="congratulations">Congratulations!</string>
    
    <string name="your_score">Your score</string>
    <string name="home">Home</string>
    <string name="level">Level :</string>
    <string name="easy1">Easy</string>
    <string name="time">Time :</string>
    <string name="tries">Tries :</string>
    <string name="score">Score :</string>
    <string name="new_game">New Game</string>
    <string name="try_again">Try Again</string>
    <string name="video">Video</string>
    <string name="rules">Rules</string>
    <string name="hint">Hint</string>
    <string name="animals">Animals</string>
    <string name="birds">Birds</string>
    <string name="food">Food</string>
    <string name="cartoon">Cartoon</string>
    <string name="logos">Logos</string>
    <string name="christmas">Christmas</string>
    <string name="easy2">Easy</string>
    <string name="medium2">Medium</string>
    <string name="hard2">Hard</string>
    <string name="scores">Scores</string>
    <string name="easy3">Easy</string>
    <string name="medium3">Medium</string>
    <string name="hard3">Hard</string>
    <string name="music">Music</string>
    <string name="language">Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="type">Type :</string>
    <string name="next_level">Next Level</string>
    
    <string name="gameover">Puzzle Timeout - Game Over!</string>
    <string name="gameoversubtitle">Better luck next time..</string>
    
</resources>
