<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_notifications_black_24dp"
            app:actionLayout="@layout/action_view_switch"
            android:title="@string/nav_music" />
        <item
            android:id="@+id/nav_lanuage"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_language" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            app:actionLayout="@layout/action_view_notifications"
            android:title="@string/nav_notification" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_logout" />

    </group>

</menu>
