<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/bg_main"
    tools:context="com.mym.bkyada.mastermemory.UserProfile">
    <ImageView
        android:id="@+id/img_gameIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_icon"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>


    <LinearLayout
        android:id="@+id/layout_update_prof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorLBG1"
        android:orientation="vertical"
        android:layout_below="@+id/img_gameIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txt_myprof"
            android:text="@string/myproflabel"
            android:textColor="@color/labelcolor"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="24sp" />

        <!-- START:NAME -->
        <LinearLayout
            android:id="@+id/name_innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_prof_name_lable"
                android:text="@string/txt_prof_name_label"
                android:textColor="@color/labelcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/txt_prof_name"
                android:textColor="@color/labelcolor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp" />



        </LinearLayout>

        <!-- START:EMAIL -->

        <LinearLayout
            android:id="@+id/email_innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/txt_prof_email_lable"
                android:text="@string/txt_prof_email_label"
                android:textColor="@color/labelcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/txt_prof_email"
                android:textColor="@color/labelcolor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <!-- END:EMAIL -->

        <TextView
            android:id="@+id/txt_line"
            android:text="@string/line"
            android:textColor="@color/colorFP"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/txt_editprof"
            android:text="@string/editproflabel"
            android:textColor="@color/labelcolor"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/newname_innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:visibility="visible">
            <TextView
                android:id="@+id/txt_prof_newname_lable"
                android:text="@string/txt_prof_newname_label"
                android:textColor="@color/labelcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <EditText
                android:id="@+id/edittxt_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:paddingLeft="15dp"
                android:background="@drawable/round_text"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/img_right_edit_name"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"

                android:layout_marginLeft="8dp"
                android:src="@drawable/save"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/newemail_innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/txt_prof_newemail_lable"
                android:text="@string/txt_prof_newemail_label"
                android:textColor="@color/labelcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <EditText
                android:id="@+id/edittxt_email"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingLeft="15dp"
                android:background="@drawable/round_text"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/img_right_edit_email"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"

                android:layout_marginLeft="8dp"
                android:src="@drawable/save"/>

        </LinearLayout>
        <!-- START : PASSWORD -->
        <LinearLayout
            android:id="@+id/newpass_innerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <TextView
                android:id="@+id/txt_prof_newpassword_lable"
                android:text="@string/txt_prof_newpassword_label"
                android:textColor="@color/labelcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <EditText
                android:id="@+id/edittxt_pass"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingLeft="15dp"
                android:background="@drawable/round_text"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:id="@+id/img_right_pass"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/save"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/textcolor"
        android:background="@drawable/round_button"
        android:fontFamily="sans-serif"
        android:textStyle="normal|bold"
        android:onClick="back"
        android:layout_below="@+id/layout_update_prof"
        android:layout_centerHorizontal="true" />

</RelativeLayout>