<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:components="http://schemas.android.com/apk/res"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".Congrats">

    <com.mym.bkyada.mastermemory.GIFView
        android:id="@+id/gif"
        android:layout_width="309px"
        android:layout_height="306px"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        components:src="@drawable/congratulations"/>

    <TextView
        android:id="@+id/txt_congo"
        android:text="@string/congratulations"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/buttonbackground"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/buttonbackground"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        />

    <TextView
        android:id="@+id/txt_scoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/buttonbackground"
        android:textStyle="bold"
        android:text="100"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:background="@drawable/round_button"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:onClick="goHome"/>

        <Button
            android:id="@+id/btn_nextlvl"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/next_level"
            android:background="@drawable/round_button"
            android:textColor="#fff"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:onClick="goNext"/>

    </LinearLayout>

</LinearLayout>