<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_top_scores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_main"
    tools:context="com.mym.bkyada.mastermemory.TopScores">

    <TextView
        android:id="@+id/txt_topScores"
        android:text="@string/top_scores"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/rules"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_below="@id/txt_topScores"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/easy"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/top_scores_buttons"
            android:onClick="showEasy"/>

        <Button
            android:id="@+id/btn_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/top_scores_buttons"
            android:onClick="showMedium"/>

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/top_scores_buttons"
            android:onClick="showHard"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_below="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/colorLBG2">

        <TextView
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="Name"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_topUserScore"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="Score"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@id/btn_back"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@color/colorLBG1"/>

    <Button
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:onClick="back"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
