<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mym.bkyada.mastermemory.ForgotPassword"
    android:background="@drawable/bg_main" >

    <ImageView
        android:id="@+id/img_gameIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_icon"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_below="@id/img_gameIcon"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="30dp"
        android:padding="8dp"
        android:background="@drawable/round_text"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn_SendPassword"
        android:layout_below="@id/txt_email"
        android:text="@string/send_password"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/btn_back"
        android:layout_below="@id/btn_SendPassword"
        android:text="@string/back"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:onClick="back"/>

</RelativeLayout>
