<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mym.bkyada.mastermemory.Help"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txt_help"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_video"
            android:text="@string/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:onClick="changeFragment"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/btn_rules"
            android:text="@string/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/round_button"
            android:onClick="changeFragment"/>

    </LinearLayout>

    <fragment
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment1"
        android:name="com.cs442.apipalia.memorygame.HelpRuleFragment"
        android:layout_below="@+id/layout1">
    </fragment>

    <TextView
        android:id="@+id/txt_help"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:textStyle="bold"
        android:textColor="@color/rules"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
